--- a/app/eventyay/static/pretixpresale/scss/custom.scss
+++ b/app/eventyay/static/pretixpresale/scss/custom.scss
@@ -203,7 +203,7 @@
     }
 
     .header-join-video-floating-mobile {
-        right: 0;
+        right: 15px;
     }
 }
 
